testing commit on mac, pushing to repo, then pulling from repo on server and viewing changes

--- a/public/index.html
+++ b/public/index.html
@@ -232,6 +232,10 @@
           </ol>
         </div>
       </div>
+      
+      <div>
+      <h3>now you're thinking with portals!</h3>
+      </div>
 
       <div id="footer">&nbsp;</div>
     </div>
